--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -16,13 +16,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title"
-        android:textStyle="bold"
+        android:layout_gravity="top"
+        android:gravity="center"
         android:textSize="21dip"
-        android:layout_gravity="center"
+        android:textStyle="bold"
         android:layout_marginBottom="2.5dip"
         android:layout_marginLeft="2.5dip"
         android:layout_marginRight="2.5dip"
-        />
+       />
 
 <ScrollView
     android:layout_width="match_parent"
