--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="madsoft.com.form.MainActivity">
+    tools:context="madsoft.com.form.MainActivity"
+    tools:ignore="MergeRootFrame">
 
 
     <ListView
@@ -16,5 +17,5 @@
         android:layout_height="wrap_content"
         android:id="@+id/list"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
