--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -5,6 +5,7 @@
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     >
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,6 +18,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+
     tools:context="madsoft.com.form.ThemeActivity">
 
     <TextView
@@ -30,9 +32,8 @@
         android:layout_marginBottom="2.5sp"
         android:layout_marginLeft="2.5sp"
         android:layout_marginRight="2.5sp"
+
        />
-
-
 
     <TextView
         android:layout_width="match_parent"
@@ -41,22 +42,26 @@
         android:textSize="18sp"
         android:padding="15sp"
         android:textStyle="italic"
-        />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/attachments"
-        android:textSize="19sp"
-        android:padding="20sp"
-        android:textStyle="bold"
         />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/image"
+
         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_share"
+        android:layout_gravity="center"
+        android:onClick="onShareButtonClick"
+        android:drawableTop="@drawable/ic_share_black_18dp"
+        android:text="@string/text_share"
+        android:background="#FAEBD7"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
 </ScrollView>
