--- a/app/src/main/res/menu/menu_theme.xml
+++ b/app/src/main/res/menu/menu_theme.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ThemeActivity">
+
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/text_share"
+        android:icon="@drawable/ic_share_black_18dp"
+        android:showAsAction="always"
+        android:orderInCategory="0"
+        android:actionProviderClass="android.widget.ShareActionProvider"/>
 
 
 
