--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <ViewFlipper
+        android:id="@+id/flipper"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+<ScrollView
+
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
@@ -12,56 +28,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_theme"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-
     tools:context="madsoft.com.form.ThemeActivity">
 
+
+
     <TextView
+        android:textColor="@color/colorBlack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title"
         android:layout_gravity="top"
         android:gravity="center"
-        android:textSize="21dip"
+        android:textSize="21sp"
         android:textStyle="bold"
         android:layout_marginBottom="2.5sp"
         android:layout_marginLeft="2.5sp"
         android:layout_marginRight="2.5sp"
-
        />
 
-    <TextView
+   <!-- <TextView
+        android:textColor="@color/colorBlack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/text_content"
         android:textSize="18sp"
         android:padding="15sp"
         android:textStyle="italic"
-
         />
+
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/image"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />-->
 
-        />
-
-    <Button
+    <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_share"
-        android:layout_gravity="center"
-        android:onClick="onShareButtonClick"
-        android:drawableTop="@drawable/ic_share_black_18dp"
-        android:text="@string/text_share"
-        android:background="#FAEBD7"
-        android:layout_marginTop="5dp"/>
-
+        android:columnCount="2"
+        android:layout_gravity="right"
+        android:visibility="gone"
+        >
+   <ImageView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_column="0"
+       android:layout_row="0"
+       android:layout_gravity="bottom"
+       android:src="@drawable/ic_visibility_black_24dp"
+       />
+        <TextView
+            android:textColor="@color/colorBlack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:text="@string/test"
+            />
+    </GridLayout>
 </LinearLayout>
 </ScrollView>
+</RelativeLayout>
