--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -6,10 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <ViewFlipper
-        android:id="@+id/flipper"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_centerHorizontal="true"
@@ -52,30 +48,12 @@
         android:layout_marginRight="2.5sp"
        />
 
-   <!-- <TextView
-        android:textColor="@color/colorBlack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_content"
-        android:textSize="18sp"
-        android:padding="15sp"
-        android:textStyle="italic"
-        />
-
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image"
-        android:contentDescription=""
-        tools:ignore="ContentDescription" />-->
-
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="2"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:visibility="gone"
         >
    <ImageView
@@ -85,7 +63,7 @@
        android:layout_row="0"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_visibility_black_24dp"
-       />
+       android:contentDescription="@string/visitors" />
         <TextView
             android:textColor="@color/colorBlack"
             android:layout_width="wrap_content"
