--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,23 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+      <!---  <item name="android:actionBarStyle">@style/MyActionBar</item>-->
        <item name="android:windowBackground">@color/colorBackground</item>
-        <item name="android:colorForeground">@color/colorSecondary</item>
-        <item name="android:textColorPrimary">@android:color/background_dark</item>
         <item name="android:color">@color/colorSecondary</item>
         <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="android:textColorSecondary">@color/colorBlack</item>
-        <!-- <item name="android:progressBarStyle">@style/MyProgressBar</item>-->
-        <!-- Customize your theme here. -->
     </style>
 
     <style name="MyActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/colorPrimary</item>
-    </style>
-
-    <style name="MyProgressBar" parent="android:Widget.Holo.Light.ProgressBar">
-        <item name="android:background">@color/colorSecondary</item>
     </style>
 
 </resources>
