--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -12,68 +12,14 @@
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-<ScrollView
-
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    >
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_theme"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="madsoft.com.form.ThemeActivity">
-
-
-
-    <TextView
-        android:textColor="@color/colorBlack"
+    <org.sufficientlysecure.htmltextview.HtmlTextView
+        android:id="@+id/activity_theme"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/title"
-        android:layout_gravity="top"
-        android:gravity="center"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="2.5sp"
-        android:layout_marginLeft="2.5sp"
-        android:layout_marginRight="2.5sp"
-       />
+        android:layout_height="match_parent"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
 
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:layout_gravity="end"
-        android:visibility="gone"
-        >
-   <ImageView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_column="0"
-       android:layout_row="0"
-       android:layout_gravity="bottom"
-       android:src="@drawable/ic_visibility_black_24dp"
-       android:contentDescription="@string/visitors" />
-        <TextView
-            android:textColor="@color/colorBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:text="@string/test"
-            />
-    </GridLayout>
-</LinearLayout>
-</ScrollView>
 </RelativeLayout>
