--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -14,15 +14,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-        <org.sufficientlysecure.htmltextview.HtmlTextView
+     <!-->   <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/activity_theme"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textSize="18sp"
+            android:textIsSelectable="true"
+            android:textColor="@color/primary_text"
+            android:background="@color/icons"
+            android:onClick="onClick"
+            tools:linksClickable="true"
+            android:textColorLink="@color/colorSecondary"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"/>
+            android:paddingBottom="@dimen/activity_vertical_margin" /><!-->
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_theme"
+        style="@style/Toolbar"
+        />
+
+    <TextView
+        android:id="@+id/activity_theme"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textSize="18sp"
+        android:textIsSelectable="true"
+        android:textColor="@color/primary_text"
+        android:background="@color/icons"
+        tools:linksClickable="true"
+        android:textColorLink="@color/colorSecondary"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" />
+
+
 
 
 </RelativeLayout>
