--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3494af</color>
-    <color name="colorPrimaryDark">#064b5f</color>
-    <color name="colorSecondary">#991905</color>
+    <color name="colorPrimary">#2e7d32</color>
+    <color name="colorPrimaryLight">#60ad5e</color>
+    <color name="colorPrimaryDark">#005005</color>
+    <color name="colorSecondary">#FF5252</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+        <color name="primary_text">#212121</color>
+        <color name="secondary_text">#757575</color>
+        <color name="icons">#FFFFFF</color>
+        <color name="divider">#BDBDBD</color>
+
 </resources>
