--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,12 @@
     <android.support.v7.widget.Toolbar android:id="@+id/toolbar_main"
         style="@style/Toolbar"
         />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_below="@id/toolbar_main"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.nirhart.parallaxscroll.views.ParallaxListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,8 +24,6 @@
         android:layout_height="match_parent"
         app:parallax_factor="1.9"
         app:circular_parallax="true"
-        android:layout_below="@id/toolbar_main"
         tools:context=".MainActivity" />
-
-
+    </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
