--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <android.support.v7.widget.Toolbar android:id="@+id/toolbar_main"
+
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_main"
         style="@style/Toolbar"
+        android:layout_alignParentTop="true"
         />
-    <android.support.v4.widget.SwipeRefreshLayout
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/toolbar_main"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <com.nirhart.parallaxscroll.views.ParallaxListView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/list_view"
+    </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:parallax_factor="1.9"
-        app:circular_parallax="true"
-        tools:context=".MainActivity" />
-    </android.support.v4.widget.SwipeRefreshLayout>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/icons"
+        app:itemTextColor="@color/icons"
+        app:menu="@menu/menu_main" />
+
+</RelativeLayout>
