--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,14 +2,36 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-    android:id="@+id/action_settings"
-    android:title="@string/text_settings"
-    android:showAsAction="never">
-    </item>
+        android:id="@+id/action_downloaded"
+        android:showAsAction="ifRoom"
+        android:enabled="true"
+        android:icon="@drawable/round_get_app_24"
+        android:title="@string/text_downloaded"></item>
+
 
     <item
-        android:id="@+id/action_about"
-        android:showAsAction="never"
-        android:title="@string/text_about"></item>
+        android:id="@+id/action_main"
+        android:title="@string/text_main"
+        android:icon="@drawable/round_home_24"
+        android:enabled="true"
+        android:showAsAction="ifRoom"
+        ></item>
+
+
+    <item
+        android:id="@+id/action_search"
+        android:showAsAction="ifRoom"
+        android:enabled="true"
+        android:icon="@drawable/round_search_24"
+        android:title="@string/text_search"></item>
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/text_settings"
+        android:icon="@drawable/round_settings_24"
+        android:enabled="true"
+        android:showAsAction="ifRoom">
+    </item>
+
 
 </menu>
