--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -8,12 +8,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-      <ProgressBar
-       android:id="@+id/progressBar"
-       android:layout_centerHorizontal="true"
-       android:layout_centerVertical="true"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_theme"
+        style="@style/Toolbar"
+        android:layout_alignParentTop="true"
+        />
 
     <!-->   <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/activity_theme"
@@ -32,21 +32,16 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin" /><!-->
 
-    <TextView
+
+    <WebView
+        android:layout_below="@id/toolbar_theme"
         android:id="@+id/activity_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textSize="18sp"
-        android:textIsSelectable="true"
-        android:textColor="@color/primary_text"
-        android:background="@color/icons"
-        tools:linksClickable="true"
-        android:textColorLink="@color/colorSecondary"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin" />
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
 
 
     </RelativeLayout>
