--- a/app/src/main/res/layout/fragment_pages.xml
+++ b/app/src/main/res/layout/fragment_pages.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -10,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-        <com.nirhart.parallaxscroll.views.ParallaxListView
-            android:id="@+id/list_view"
+        android:layout_alignParentLeft="true">
+        <android.support.v7.widget.RecyclerView
+            android:scrollbars="vertical"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:parallax_factor="1.9"
-            app:circular_parallax="true"
-            tools:context=".MainActivity" />
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
