--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -9,45 +9,45 @@
 
     <android.support.v7.widget.CardView
         android:background="@color/cardview_light_background"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/card_view"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="10dp"
+        android:layout_margin="16dp"
+        card_view:cardUseCompatPadding="true"
         card_view:cardBackgroundColor="@color/cardview_light_background"
         >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="#FFF" >
+            android:layout_height="wrap_content">
+
 
             <ImageView
                 android:id="@+id/card_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"/>
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/card_title"
                 android:layout_alignParentBottom="true"
-                android:background="#7000"
                 android:gravity="center"
                 android:paddingBottom="15dp"
                 android:paddingTop="15dp"
-                android:textColor="#FFF"
-                android:textSize="36sp"
+                android:textColor="@color/primary_text"
+                android:textSize="18sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -56,11 +56,9 @@
                 android:maxLines="2"
                 android:maxLength="170"
                 android:ellipsize="end"
-                android:paddingBottom="15dp"
-                android:paddingTop="15dp"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"
+                android:textColor="@color/secondary_text"
                 android:textStyle="italic" />
+        </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
