--- a/app/src/main/res/layout/fragment_pages.xml
+++ b/app/src/main/res/layout/fragment_pages.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/dark_background"
+    android:layout_height="wrap_content"
+    android:paddingBottom="56dp"
+    android:background="@color/fragments_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
