--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2e7d32</color>
-    <color name="colorPrimaryLight">#60ad5e</color>
-    <color name="colorPrimaryDark">#005005</color>
-    <color name="colorSecondary">#FF5252</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryLight">#B2DFDB</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorSecondary">#607D8B</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
         <color name="primary_text">#212121</color>
         <color name="secondary_text">#757575</color>
         <color name="icons">#FFFFFF</color>
         <color name="divider">#BDBDBD</color>
-    <color name="fragments_background">#f5f5f5</color>
+    <color name="fragments_background">#e2e2e2</color>
 
 </resources>
