Добавил кнопки в карточки

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorSecondary">#607D8B</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorAccent">#607D8B</color>
         <color name="primary_text">#212121</color>
         <color name="secondary_text">#757575</color>
         <color name="icons">#FFFFFF</color>
