--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -58,6 +58,25 @@
                 android:textColor="@color/secondary_text"
                 android:textStyle="italic" />
         </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="16dp"
+                android:gravity="center">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_share"
+                    android:layout_marginEnd="5dp"
+                    style ="?android:attr/borderlessButtonStyle"
+                     />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_download"
+                    style ="?android:attr/borderlessButtonStyle" />
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
