--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
        <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:color">@color/colorSecondary</item>
         <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="Toolbar">
