--- a/app/src/main/res/layout/category_picker.xml
+++ b/app/src/main/res/layout/category_picker.xml
@@ -7,7 +7,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/categories_recyclerView"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
 
