--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        xmlns:tools="http://schemas.android.com/tools"
-        android:textColor="@color/primary_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/item_background"
-        android:id="@+id/pro_item"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="28sp"
-        android:paddingTop="18sp"
-        tools:ignore="HardcodedText"
-        />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/category_text"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="15dp"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
 </LinearLayout>
