--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -47,13 +47,10 @@
         android:layout_height="match_parent">
 
     <WebView
-        android:id="@+id/activity_theme"
+        android:id="@+id/activity_theme_webView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:isScrollContainer="false"/>
 
     </androidx.core.widget.NestedScrollView>
